--- a/src/components/MovieList.css
+++ b/src/components/MovieList.css
@@ -1,31 +1,34 @@
 .movie-list-container {
   padding: 20px;
   margin: 2px;
-  width: 60%;
+  width: 58%;
 }
 
 .movie-card {
-  border: 1px solid #ccc;
+  /* border: 1px solid #ccc; */
   border-radius: 8px;
   margin-bottom: 20px;
   padding: 15px;
-  width: 34%;
+  width: 77%;
 }
 
 .movie-card img {
-  max-width: 200px;
+  max-width: 176px;
   height: auto;
   border-radius: 0px;
   margin-bottom: 10px;
 }
 
+.movie-list {
+  border: 1px solid black;
+}
 .movie-title {
   font-size: 18px;
   font-weight: bold;
   margin-bottom: 8px;
 }
 
-.movie-description {
-  font-size: 14px;
+.movie-rating {
+  font-size: 4px;
   color: #666;
 }
